# mdlr

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Taskfile.yml  roadmap.md
.claude/commands/: auto-improve.md
crates/mdlr/: Cargo.toml
crates/mdlr-cpd/: Cargo.toml
crates/mdlr-extract-rust/: Cargo.toml  Taskfile.yml
docs/: README.md  research.md
docs/getting-started/: installation.md  quick-start.md
docs/metrics/: cognitive-complexity.md  complexity.md  dag-density.md  fan-in.md  fan-out.md  file-loc.md  impl-metrics.md  interpreting-results.md  line-coverage.md  main-sequence-distance.md  overview.md  tag-coverage.md  uncov-branches.md
docs/reference/: cli.md  config.md  graph.md  hir-extract.md  languages.md  releasing.md  sessions.md
docs/roadmap/: ignored-metrics.md
scripts/: build-csharp-extractor.sh  fetch-test-repos.py
src/: cli.rs  json_output.rs  lib.rs  main.rs  prompt.md  symbol_commands.rs  walk.rs
src/cache/: mod.rs  store.rs  types.rs
src/config/: loader.rs  mod.rs  types.rs
src/extract/: mod.rs  rust.rs  rust_tests.rs  types.rs
src/graph/: builder.rs  mod.rs  serialize.rs  types.rs
src/metrics/: complexity.rs  display.rs  file_loc.rs  impl_metrics.rs  mod.rs  rows.rs  structural.rs  tags.rs
src/resolve/: mod.rs  resolve.rs
src/session/: mod.rs  store.rs
tools/mdlr-extract-csharp/: MemberMetrics.cs  Models.cs  Program.cs  Tokenizer.cs  UnitExtractor.cs  mdlr-extract-csharp.csproj
tools/mdlr-extract-csharp.Tests/: ExtractorTests.cs  mdlr-extract-csharp.Tests.csproj
tools/mdlr-extract-go/: branches.go  go.mod  (+9 more)
tools/mdlr-extract-py/: Cargo.toml
tools/mdlr-extract-py/src/: main.rs  visitor.rs
tools/mdlr-extract-rust/: Cargo.toml
tools/mdlr-extract-rust/src/: cognitive.rs  field_access.rs  main.rs  visitor.rs
tools/mdlr-extract-rust/tests/: extraction.rs
tools/mdlr-extract-ts/: Cargo.toml
tools/mdlr-extract-ts/src/: calls.rs  field_access.rs  main.rs  visitor.rs
tools/mdlr-extract-ts/tests/: cpd.rs  extraction.rs
(+60 files in other folders)
