[package]
name = "mdlr-extract-py"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mdlr-extract-py"
path = "src/main.rs"

[dependencies]
mdlr-core = { workspace = true }
mdlr-cpd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
rayon = "1"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev = "34998be22ec3a77d398bbd55234ef8740f768329" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev = "34998be22ec3a77d398bbd55234ef8740f768329" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", rev = "34998be22ec3a77d398bbd55234ef8740f768329" }

[dev-dependencies]
tempfile = { workspace = true }
