[package]
name = "mdlr-extract-ts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mdlr-extract-ts"
path = "src/main.rs"

[dependencies]
mdlr-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
rayon = "1"
swc_common = { version = "19", features = ["sourcemap"] }
swc_ecma_ast = "21"
swc_ecma_parser = "35"
swc_ecma_visit = "21"

[dev-dependencies]
tempfile = { workspace = true }
